Added entries to .gitignore. Fixed C mode. DEBUG BY DEFAULT.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,11 @@ ido.last
 #*#
 /server/n
 local
+/.mc-lists.el
+/.#session.10f8d594093961fb3148013909391414300000019660073
+/bookmarks
+/network-security.data
+/tutor/
+/el-get/
+/eshell/
+.tutor/
